Fix the stretched logos in mobile

--- a/src/main/content/_assets/css/home.scss
+++ b/src/main/content/_assets/css/home.scss
@@ -373,10 +373,6 @@ body {
 #logo_image_row {
     padding-bottom: 45px;
     border-bottom: 2px solid #979797;
-
-    & img {
-        height: fit-content;
-    }
 }
 
 #microprofile_logo {
